--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,8 @@
+#resultPic {
+    height: 20vh;
+    width: 27vw;
+}
+
 #continue {
     display: none;
 }
@@ -120,9 +125,6 @@ h1 {
 
 #pic {
     top: 55%;
-    /*     height: 200px;
-    width: 200px; */
-
 }
 
 #correct {
@@ -145,4 +147,25 @@ h1 {
 #start {
     top: 80%;
     width: 20%;
+}
+
+@media (max-width: 1050px) {
+
+    #resultPic {
+        height: 20vh;
+        width: 44vw;
+    }
+}
+
+@media (max-width: 700px) {
+
+    .topType,
+    .resultType {
+        font-size: 2.8vh;
+    }
+
+    #resultPic {
+        height: 20vh;
+        width: 66vw;
+    }
 }
