--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -165,6 +165,14 @@ h1 {
 
 @media (max-width: 700px) {
 
+    body {
+        background: url(../images/johnWickBG.jpg);
+        background-size: 1000px 1000px;
+        background-position: 50% 0%;
+        background-repeat: no-repeat;
+        z-index: 1;
+    }
+
     .topType,
     .resultType {
         font-size: 2.8vh;
